<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@color/divider"
        android:showDividers="middle" >

        <HorizontalScrollView
            android:id="@+id/tabScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none" >

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:background="@drawable/selector"
                    android:button="@null"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/item1" />

                <RadioButton
                    android:id="@+id/radio2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:background="@drawable/selector"
                    android:button="@null"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/item2" />

                <RadioButton
                    android:id="@+id/radio3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:background="@drawable/selector"
                    android:button="@null"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/item3" />

                <RadioButton
                    android:id="@+id/radio4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:background="@drawable/selector"
                    android:button="@null"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/item4" />

                <RadioButton
                    android:id="@+id/radio5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:background="@drawable/selector"
                    android:button="@null"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/item5" />
            </RadioGroup>
        </HorizontalScrollView>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="1px"
            tools:context="com.inteliment.kiran.scenario1.Activity1" />

        <LinearLayout
            android:id="@+id/textViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1px"
            android:orientation="vertical" >
            
            <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:text="@string/tv1"
	            android:gravity="start|center_vertical"/>
            
            <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:text="@string/tv2"
	            android:gravity="center"/>
            
            <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:text="@string/tv3"
	            android:gravity="end|center_vertical"/>
            
        </LinearLayout>
        
        <TextView
            android:id="@+id/tabTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1px"
            android:textSize="15sp"
            android:padding="10dp"
            android:textStyle="bold" />
        
        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1px"
            android:orientation="horizontal"
            android:padding="20dp"
            android:background="#b4bab3">
            
            <Button
                android:id="@+id/redBtn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:text="@string/red"
	            android:onClick="onColorButtonClicked"
	            android:gravity="center"
	            android:layout_weight="1" />
            
            <Button 
                android:id="@+id/blueBtn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:text="@string/blue"
	            android:onClick="onColorButtonClicked"
	            android:gravity="center"
	            android:layout_weight="1" />
            
            <Button 
                android:id="@+id/greenBtn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:text="@string/green"
	            android:onClick="onColorButtonClicked"
	            android:gravity="center"
	            android:layout_weight="1" />
            
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>